[gd_scene load_steps=6 format=3 uid="uid://b54xxl7212wqv"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Interactables/pickupablenode.gd" id="1_e4blf"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Interactables/interactable.gd" id="2_5tfdc"]
[ext_resource type="Shape2D" uid="uid://ble12l3uunb8p" path="res://Assets/Presets/Level Assets/Onboarding/Collisions/cs_large_pickup_obj_shape.tres" id="3_ufm1r"]
[ext_resource type="Texture2D" uid="uid://bstobnwhsu5hn" path="res://Assets/Art/Textures/Enviroment/gmtk crate.png" id="4_o13sw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tsmvo"]
size = Vector2(340, 341)

[node name="pickupable_element" type="Node2D"]
position = Vector2(844, -158)
script = ExtResource("1_e4blf")
required_size = 1

[node name="interactable" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("2_5tfdc")

[node name="shape" type="CollisionShape2D" parent="interactable"]
position = Vector2(-3, -24)
shape = ExtResource("3_ufm1r")

[node name="collider" type="StaticBody2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="collider"]
position = Vector2(-3, -24)
shape = ExtResource("3_ufm1r")
debug_color = Color(0.398036, 0.609323, 0, 0.42)

[node name="visual" type="Sprite2D" parent="collider"]
z_index = 4
position = Vector2(-3, -24)
scale = Vector2(0.227931, 0.227931)
texture = ExtResource("4_o13sw")

[node name="world_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="world_checker"]
position = Vector2(-3, -24.5)
shape = SubResource("RectangleShape2D_tsmvo")

[connection signal="body_entered" from="world_checker" to="." method="_on_world_checker_body_entered"]
[connection signal="body_exited" from="world_checker" to="." method="_on_world_checker_body_exited"]
